FEng: add TPK filename to config

--- a/Config-Carbon/NFS_XtendedInput.ini
+++ b/Config-Carbon/NFS_XtendedInput.ini
@@ -15,6 +15,7 @@ DeadzonePercent_AnalogTriggerDigital = 0.12 // same for triggers
 ControllerIconMode = 0 // 0 = Xbox One, 1 = PS4, 2 = Xbox 360, 3 = PS3
 FirstControlDevice = 0 // 0 = Keyboard, 1 = Controller -- for setting the first state
 UseDynamicFEngSwitching = 1 // enable/disable dynamic FEng switching for button icons
+ButtonTexFilename = GLOBAL\XtendedInputButtons.tpk
 
 [Events]
 FRONTENDACTION_UP = XINPUT_GAMEPAD_DPAD_UP
