--- a/Config-ProStreet/NFS_XtendedInput.ini
+++ b/Config-ProStreet/NFS_XtendedInput.ini
@@ -3,6 +3,7 @@ KeyboardReadingMode = 0 // 0 = async unbuffered, 1 = buffered
 ConfineMouse = 0 // confine mouse within the game window
 UseWin32Cursor = 1 // use Win32/OS to render the mouse (recommended for performance benefits)
 UseCustomCursor = 1 // use the nfs_cursor.cur file as the cursor style
+MouseLook = 1 // use mouse for looking during DebugWorldCamera (this will stick and hide the cursor to the window center during the camera)
 DeadzonePercentLS = 0.24 // set the percentage of deadzone for each stick here (default 24% = 0.24)
 DeadzonePercentRS = 0.24
 DeadzonePercentLS_P2 = 0.24
