--- a/Config-World/NFS_XtendedInput.ini
+++ b/Config-World/NFS_XtendedInput.ini
@@ -1,5 +1,6 @@
 [Input]
 KeyboardReadingMode = 0 // 0 = async unbuffered, 1 = buffered
+MouseLook = 1 // use mouse for looking during DebugWorldCamera (this will stick and hide the cursor to the window center during the camera)
 DeadzonePercentLS = 0.24 // set the percentage of deadzone for each stick here (default 24% = 0.24)
 DeadzonePercentRS = 0.24
 DeadzonePercentLS_P2 = 0.24
