[UC] update cancel binding to BACKSPACE

--- a/Config-UC/NFS_XtendedInput.ini
+++ b/Config-UC/NFS_XtendedInput.ini
@@ -85,7 +85,7 @@ FRONTENDACTION_DOWN = VK_DOWN
 FRONTENDACTION_LEFT = VK_LEFT
 FRONTENDACTION_RIGHT = VK_RIGHT
 FRONTENDACTION_ACCEPT = VK_RETURN
-FRONTENDACTION_CANCEL = VK_ESCAPE
+FRONTENDACTION_CANCEL = VK_BACK
 FRONTENDACTION_RUP = W
 FRONTENDACTION_RDOWN = S
 FRONTENDACTION_RLEFT = A
