--- a/NFS_XtendedInput.vcxproj
+++ b/NFS_XtendedInput.vcxproj
@@ -257,6 +257,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_WARNINGS;GAME_MW;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <EnableEnhancedInstructionSet>StreamingSIMDExtensions</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -264,7 +265,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@post-build\mw_debug.bat</Command>
+      <Command>@post-build\mw_debug_win7.bat</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug-Carbon|Win32'">
@@ -537,6 +538,7 @@
     <None Include="post-build\carbon_debug.bat" />
     <None Include="post-build\mw.bat" />
     <None Include="post-build\mw_debug.bat" />
+    <None Include="post-build\mw_debug_win7.bat" />
     <None Include="post-build\mw_win7.bat" />
     <None Include="post-build\prostreet.bat" />
     <None Include="post-build\prostreet_debug.bat" />
