--- a/.gitignore
+++ b/.gitignore
@@ -383,3 +383,4 @@ FodyWeavers.xsd
 /Debug-World-Win7
 /Release-World-Win7
 /XtendedInputButtons/XtendedInputButtons.ini
+/XtendedInputButtons/8A69054A.ini
