update configs and README

--- a/Config-Carbon/NFS_XtendedInput.ini
+++ b/Config-Carbon/NFS_XtendedInput.ini
@@ -14,7 +14,7 @@ DeadzonePercent_AnalogStickDigital = 0.50 // deadzone for analog sticks digital 
 DeadzonePercent_AnalogTriggerDigital = 0.12 // same for triggers
 
 [Icons]
-ControllerIconMode = 0 // 0 = Xbox One, 1 = PS4, 2 = Xbox 360, 3 = PS3
+ControllerIconMode = 0 // 0 = Xbox One, 1 = PS4, 2 = Xbox 360, 3 = PS3, 4 = Switch, 5 = 360 (MW)
 FirstControlDevice = 0 // 0 = Keyboard, 1 = Controller -- for setting the first state
 UseDynamicFEngSwitching = 1 // enable/disable dynamic FEng switching for button icons
 ButtonTexFilename = GLOBAL\XtendedInputButtons.tpk
