implement ProStreet remapping + splash takeover

--- a/Config-Carbon/NFS_XtendedInput.ini
+++ b/Config-Carbon/NFS_XtendedInput.ini
@@ -17,6 +17,7 @@ DeadzonePercent_AnalogTriggerDigital = 0.12 // same for triggers
 ControllerIconMode = 0 // 0 = Xbox One, 1 = PS4, 2 = Xbox 360, 3 = PS3, 4 = Switch, 5 = 360 (MW)
 FirstControlDevice = 0 // 0 = Keyboard, 1 = Controller -- for setting the first state
 UseDynamicFEngSwitching = 1 // enable/disable dynamic FEng switching for button icons
+EnableSplashTakeover = 1    // splash screen continue button text takeover
 ButtonTexFilename = GLOBAL\XtendedInputButtons.tpk
 
 [Events]
